--- a/aur.cabal
+++ b/aur.cabal
@@ -4,7 +4,7 @@
 -- The name of the package.
 name:                aur
 
-version:             0.0.1
+version:             0.1.0
 
 synopsis:            Access metadata from the Arch Linux User Repository.
 
@@ -47,23 +47,26 @@ description:         Access package information from Arch Linux's AUR via its
 -- extra-source-files:
 
 library
-  exposed-modules:     Linux.Arch.Aur.Rpc, Linux.Arch.Aur.Types
+  exposed-modules:     Linux.Arch.Aur.Pkgbuild,
+                       Linux.Arch.Aur.Rpc,
+                       Linux.Arch.Aur.Types
   
   -- Modules included in this library but not exported.
   -- other-modules:       
   
   -- LANGUAGE extensions used by modules in this package.
-  other-extensions:    OverloadedStrings
+  other-extensions:    OverloadedStrings, ScopedTypeVariables
   
   -- Other library packages from which modules are imported.
   build-depends:       base >=4.7 && <4.8,
                        mtl >=2.1 && <2.2,
-                       lens >=4.1 && <4.2,
+                       lens >=4.2 && <4.3,
                        aeson >=0.7 && <0.8,
                        aeson-pretty >=0.7 && <0.8,
                        text >=1.1 && <1.2,
                        wreq >=0.1 && <0.2,
-                       vector >=0.10 && <0.11
+                       vector >=0.10 && <0.11,
+                       filepath
   
   -- Directories containing source files.
   -- hs-source-dirs:      
