--- a/aur.cabal
+++ b/aur.cabal
@@ -4,7 +4,7 @@
 -- The name of the package.
 name:                aur
 
-version:             2.0.1
+version:             2.0.2
 
 synopsis:            Access metadata from the Arch Linux User Repository.
 
@@ -58,14 +58,15 @@ library
   other-extensions:    OverloadedStrings, ScopedTypeVariables
   
   build-depends:       base >=4.7 && <4.8,
-                       mtl >=2.1 && <3,
+                       aeson >=0.7 && <1,
+                       aeson-pretty >=0.7 && <1,
+                       filepath,
                        lens >=4.2 && <5,
-                       aeson >=0.7 && <0.8,
-                       aeson-pretty >=0.7 && <0.8,
-                       text >=1.1 && <1.2,
-                       wreq >=0.1 && <0.2,
+                       lens-aeson,
+                       mtl >=2.1 && <3,
+                       text >=1.1 && <1.3,
                        vector >=0.10 && <0.11,
-                       filepath
+                       wreq >=0.1 && <0.3
   
   -- Directories containing source files.
   -- hs-source-dirs:      
