--- a/aur.cabal
+++ b/aur.cabal
@@ -66,7 +66,7 @@ library
                        mtl >=2.1 && <3,
                        text >=1.1 && <1.3,
                        vector >=0.10 && <0.11,
-                       wreq >=0.1 && <0.4
+                       wreq >= 0.3
   
   -- Directories containing source files.
   -- hs-source-dirs:      
