--- a/aur.cabal
+++ b/aur.cabal
@@ -4,7 +4,7 @@
 -- The name of the package.
 name:                aur
 
-version:             2.0.3
+version:             2.0.4
 
 synopsis:            Access metadata from the Arch Linux User Repository.
 
@@ -42,6 +42,10 @@ description:         Access package information from Arch Linux's AUR via its
                      By default this library supports version 3 of the RPC,
                      and hence version 3.2+ of the AUR.
 
+source-repository head
+  type:     git
+  location: git://github.com/aurapm/haskell-aur.git
+
 -- Extra files to be distributed with the package, such as examples or a
 -- README.
 -- extra-source-files:
@@ -57,7 +61,7 @@ library
   
   other-extensions:    OverloadedStrings, ScopedTypeVariables
   
-  build-depends:       base >=4.7 && <4.8,
+  build-depends:       base >=4.7 && <4.9,
                        aeson >=0.7 && <1,
                        aeson-pretty >=0.7 && <1,
                        filepath,
@@ -66,7 +70,7 @@ library
                        mtl >=2.1 && <3,
                        text >=1.1 && <1.3,
                        vector >=0.10 && <0.11,
-                       wreq >= 0.3
+                       wreq-sb >= 0.4
   
   -- Directories containing source files.
   -- hs-source-dirs:      
