--- a/aur.cabal
+++ b/aur.cabal
@@ -4,7 +4,7 @@
 -- The name of the package.
 name:                aur
 
-version:             3.0.0
+version:             4.0.0
 
 synopsis:            Access metadata from the Arch Linux User Repository.
 
@@ -70,7 +70,7 @@ library
                        mtl >=2.1 && <3,
                        text >=1.1 && <1.3,
                        vector >=0.10 && <0.11,
-                       wreq-sb >= 0.4
+                       wreq >=0.4
   
   -- Directories containing source files.
   -- hs-source-dirs:      
