--- a/aur.cabal
+++ b/aur.cabal
@@ -69,7 +69,7 @@ library
                        lens-aeson,
                        mtl >=2.1 && <3,
                        text >=1.1 && <1.3,
-                       vector >=0.10 && <0.11,
+                       vector >=0.10,
                        wreq >=0.4
   
   -- Directories containing source files.
